look up local event in search box

--- a/app/views/event/search.erb
+++ b/app/views/event/search.erb
@@ -1,2 +1,2 @@
 <%= render "shared/search_box" %>
-<% render :partial => "shared/event_list", :locals => { :events => @events } %>
+<%= render :partial => "shared/event_list", :locals => { :events => @events } %>
