--- a/app/views/shared/_event_list.erb
+++ b/app/views/shared/_event_list.erb
@@ -1,1 +1,7 @@
-This is the event list
+<table>
+<% @events.each do |event|  %>
+  <tr>
+    <td><%= event.name %> </td>
+  </tr>
+<% end %>
+</table>
