--- a/app/views/shared/_search_box.erb
+++ b/app/views/shared/_search_box.erb
@@ -1,4 +1,4 @@
-<%= form_tag('/event/search', :method => "post") do %>
+<%= form_tag('/event/event_find', :method => "post") do %>
   <%= label_tag(:q, "Search for:") %>
   <%= text_field_tag(:q) %>
   <%= submit_tag("Search") %>
