--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,6 +1,6 @@
 <% if current_user.nil? %>
 <%= link_to 'Login', login_path %> or <%= link_to 'Sign-up', signup_path %>
 <% else %>
-Welcome <%= current_user.name %> - <%= link_to 'Logout', logout_path %>
+Welcome <%= current_user.name %> - <%= link_to 'Logout', logout_path %> - <%= link_to 'My Account', myaccount_path %>
 <% end %>
 <hr />
