--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -1,1 +1,1 @@
-Welcome to EventPooler. Visit the <%= link_to 'search page', search_path %> to find events.
+Welcome to EventPooler. Visit the <%= link_to 'search page', event_find_path %> to find events.
