Some more user stuff - Registration confirmation email, forgot password email

--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -1,1 +1,1 @@
-Welcome to EventPooler. Visit the <%= link_to 'search page', event_find_path %> to find events.
+Thank you for signing up to Event Pooler. Please check your email for a link to confirm your registration.
