--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -4,3 +4,5 @@ Email Address: <%= text_field_tag :email %><br />
 Password: <%= password_field_tag :password %><br />
 <%= submit_tag "Login" %>
 <% end %>
+<br /><br />
+<%= link_to 'Forgot Password?', forgot_password_path %>
