--- a/app/views/event/event_page.erb
+++ b/app/views/event/event_page.erb
@@ -1,3 +1,14 @@
+<% unless @event.attendees.include?(current_user) %>
+  <%= link_to 'Attend', attend_event_path %>
+<% else %>
+  <%= render :partial => 'update_sharables' %>
+<% end %>
+<h3>Attendees</h3>
+<% @event.attendees.each do |attendee| %>
+  <%= attendee.name %>
+<% end %>
+<br />
+<br />
 <%= @event.name %>
 <br/>
 <br/>
