--- a/app/views/event/event_page.erb
+++ b/app/views/event/event_page.erb
@@ -1,17 +1,16 @@
+<h3><%= @event.name %></h3>
+<% unless flash[:message].nil? %>
+  <%= flash[:message] %><br /><br />
+<% end %>
 <% unless @event.attendees.include?(current_user) %>
   <%= link_to 'Attend', attend_event_path %>
 <% else %>
+  <%= link_to 'Cancel Attendance', cancel_attendance_path %><br /><br />
   <%= render :partial => 'update_sharables' %>
-<% end %>
-<h3>Attendees</h3>
-<% @event.attendees.each do |attendee| %>
-  <%= attendee.name %>
+  <%= render :partial => 'attendees' %>
 <% end %>
 <br />
 <br />
-<%= @event.name %>
-<br/>
-<br/>
 
 <%= @event.description.html_safe %>
 
