better event profiling

--- a/app/views/event/create.erb
+++ b/app/views/event/create.erb
@@ -18,6 +18,18 @@
   <%= label_tag(:name, "Province/State:") %> </td><td><%= text_field_tag(:region) %>
   </td></tr>
   <tr><td>
+  <%= label_tag(:name, "Postal/Zip Code:") %> </td><td><%= text_field_tag(:code) %>
+  </td></tr>
+  <tr><td>
+  <%= label_tag(:name, "Phone:") %> </td><td><%= text_field_tag(:phone) %>
+  </td></tr>
+  <tr><td>
+  <%= label_tag(:name, "Email:") %> </td><td><%= text_field_tag(:email) %>
+  </td></tr>
+  <tr><td>
+  <%= label_tag(:name, "Url:") %> </td><td><%= text_field_tag(:url) %>
+  </td></tr>
+  <tr><td>
   <%= label_tag(:name, "Start Date/Time:") %> </td><td><%= text_field_tag(:start_time) %>
   </td></tr>
   <tr><td>
