--- a/app/views/event/_attendees.html.erb
+++ b/app/views/event/_attendees.html.erb
@@ -7,6 +7,14 @@ Only show attendees sharing:<br />
   <% end %>
 <% end %>
 <br />
+Only show attendees travelling from:<br />
+<% form_tag filter_attendees_path(@event.id), :remote => true do %>
+
+  <% cities = @event.attendees.collect{|attendee| attendee.city + ", " + attendee.region}.flatten.uniq %>
+  <%=  select_tag("city", options_for_select(cities), :class => 'submittable') %>
+
+ <% end %>
+<br />
 <div id="filtered_attendees">
   <%= render :partial => 'filtered_attendees' %>
 </div>
