--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -1,2 +1,22 @@
-<h3>Sign-up</h3><br />
-<%= render :partial => 'user_info' %>
+        <div class="content content-two-columns">
+            <div class="banner-area">
+                <h1>Signup</h1>
+            </div>
+            <div class="column-wrapper">
+                <div class="left-column">
+                    <%= render :partial => 'user_info' %>
+                    
+                </div>
+                <div class="right-column">
+                    <div class="block">
+                      &nbsp;<br />&nbsp;<br />&nbsp;<br />&nbsp;<br />
+                      &nbsp;<br />&nbsp;<br />&nbsp;<br />
+                    </div>
+                </div>
+                <div class="clear-fix">&nbsp;</div>
+                <div class="right-column-bg-bottom-fix">&nbsp;</div>
+            </div>
+        </div>
+
+
+
