--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="wrapper">
         <div class="header">
             <%= render :partial => '/shared/header_navigation' %>
-            <%= link_to image_tag('logo.png'), home_path, :class => 'logo' %>
+            <%= link_to image_tag('logo.png'), root_path, :class => 'logo' %>
         </div>
         <%= yield %>
         <div class="footer">
