--- a/app/views/event/event_find.erb
+++ b/app/views/event/event_find.erb
@@ -1,4 +1,20 @@
-<%= render "shared/search_box" %>
-Can't find what you're looking for? <%=  link_to "Add a new event", event_create_path %>
-
-<%= render :partial => "shared/event_list", :locals => { :events => @events } %>
+        <div class="content content-two-columns">
+            <div class="banner-area">
+                <h1>Event Search</h1>
+            </div>
+            <div class="column-wrapper">
+                <div class="left-column">
+                    <%= render "shared/search_box" %>
+                    Can't find what you're looking for? <%=  link_to "Add a new event", event_create_path %>
+                    <%= render :partial => "shared/event_list", :locals => { :events => @events } %>
+                </div>
+                <div class="right-column">
+                    <div class="block">
+                      &nbsp;<br />&nbsp;<br />&nbsp;<br />&nbsp;<br />
+                      &nbsp;<br />&nbsp;<br />&nbsp;<br />
+                    </div>
+                </div>
+                <div class="clear-fix">&nbsp;</div>
+                <div class="right-column-bg-bottom-fix">&nbsp;</div>
+            </div>
+        </div>
