--- a/app/views/shared/_search_box.erb
+++ b/app/views/shared/_search_box.erb
@@ -1,8 +1,10 @@
-<%= form_tag('/event/event_find', :method => "post") do %>
-  <%= label_tag(:q, "Search for:") %>
-  <%= text_field_tag(:q) %>
-
-  <%= label_tag(:q, "in:") %>
-  <%= text_field_tag(:loc) %>
-  <%= submit_tag("Search") %>
-<% end %>
+<div class="search-form">
+    <%= form_tag('/event/event_find', :method => "post") do %>
+      <%= label_tag(:q, "Search for:") %>
+      <%= text_field_tag(:q) %>
+    
+      <%= label_tag(:q, "in:") %>
+      <%= text_field_tag(:loc) %>
+      <%= submit_tag("Search") %>
+    <% end %>
+</div>
