Creating and updating a group

--- a/app/views/event/event_page.erb
+++ b/app/views/event/event_page.erb
@@ -42,8 +42,7 @@
                 </div>
                 <div class="right-column">
                     <div class="block">
-                      &nbsp;<br />&nbsp;<br />&nbsp;<br />&nbsp;<br />
-                      &nbsp;<br />&nbsp;<br />&nbsp;<br />
+                      <%= render :partial => 'groups' %>
                     </div>
                 </div>
                 <div class="clear-fix">&nbsp;</div>
