Listing of groups with basic info on event page, groups closest to user appear first

--- a/app/views/event/_groups.html.erb
+++ b/app/views/event/_groups.html.erb
@@ -1,10 +1,16 @@
 <h3>Groups</h3>
 <%= link_to 'Create Group', create_group_path(@event.id) %>
 <hr />
-<% @event.groups.user_groups.each do |group| %>
+<% @event.groups.user_groups.closest_to_user(current_user).each do |group| %>
   <%= link_to group.name, group_path(@event.id, group.id) %>
   <% if group.administrator == current_user %>
     - <%= link_to 'Edit', update_group_path(@event.id, group.id) %>
   <% end %>
   <br />
+  Based in - <%= group.city %>, <%= group.region %>
+  <br />
+  Sharing - <%= group.sharables.map{|s| s.name}.to_sentence %>
+  <br />
+  Type - <%= group.group_type.name %>
+  <br /><br />
 <% end %>
