added messaging and group stuff - messy but pushing to show structure

--- a/app/views/event/_groups.html.erb
+++ b/app/views/event/_groups.html.erb
@@ -3,6 +3,9 @@
 <hr />
 <% @event.groups.user_groups.closest_to_user(current_user).each do |group| %>
   <%= link_to group.name, group_path(@event.id, group.id) %>
+
+  <%=  link_to "join", join_group_path(@event.id, group.id) %>
+
   <% if group.administrator == current_user %>
     - <%= link_to 'Edit', update_group_path(@event.id, group.id) %>
   <% end %>
