--- a/app/views/shared/_comment.erb
+++ b/app/views/shared/_comment.erb
@@ -1,12 +1,15 @@
-<div style="background-color: #EEEEEE; padding: 5px; margin: 5px; border-color: #AAAAAA; border-style: solid;">
+<div class="message wrapper">
 <% user = User.find_by_id(comment.user_id) %>
 <%  if !user.nil? %>
-<%= image_tag user.avatar.url(:thumb) if user.avatar.exists? %>
+<div class="icon"><%= image_tag user.avatar.url(:thumb) if user.avatar.exists? %></div>
 <% end %>
+<div class="info">
 <%= user.name rescue "anonymous"%>
-
+</div>
+<div class="subinfo">
 <%= user.city rescue "city" %> <%= user.region rescue "province"  %> <%=   %>
 <%= group.event.event_group.memberships.for_user(user).first.sharables.collect{|share| share.name }.join(", ") rescue "" %>
 <br/>
 <%= comment.message %>
+</div>
 </div>
