--- a/app/views/shared/_message_board.erb
+++ b/app/views/shared/_message_board.erb
@@ -1,7 +1,9 @@
 <h2>Messages</h2>
 <% group.comments.each do |comment|  %>
-<% p comment %>
+
 <%= render :partial => 'shared/comment', :locals => {:comment => comment, :group => group} %>
 <% end unless group.comments.nil?%>
 
+<% if group.users.include?(current_user) %>
 <%= render :partial => 'shared/comment_form' %>
+<% end %>
