--- a/app/views/group/show_group.erb
+++ b/app/views/group/show_group.erb
@@ -15,10 +15,20 @@
   <%= link_to @group.public? ? 'Join' : 'Request to Join', join_group_path(@group.event.id, @group.id) %>
 <% end %>
 <br/>
+<% if !@group.memberships.approved.for_user(current_user).blank? %>
 <h3>Members</h3>
 <% @group.memberships.approved.each do |member| %>
-<%= image_tag member.user.avatar.url(:thumb) if member.user.avatar.exists? %> <strong><%= member.user.name %></strong><br/>
-<span style="font-size: small">Sharing: <%=  @group.event.event_group.memberships.for_user(member.user).first.sharables.collect{|share| share.name }.join(", ") rescue "" %></span>
+<div>
+  <% if member.user.avatar.exists? %>
+    <%= image_tag member.user.avatar.url(:thumb) %>
+  <% else %>
+    <%= image_tag '/images/user-icon.jpg' %>
+  <% end %>
+  <strong><%= member.user.name %></strong>
+<span style="font-size: small; font-style:italic;"><%=  @group.event.event_group.memberships.for_user(member.user).first.sharables.collect{|share| share.name }.join(", ") rescue "" %></span>
+</div>
 <%end%>
 <br/>
+
 <%= render :partial => 'shared/message_board', :locals => {:group => @group} %>
+<% end %>
