Allow user to share specific resources with private groups

--- a/app/views/event/event_page.erb
+++ b/app/views/event/event_page.erb
@@ -13,7 +13,7 @@
                       <%= link_to 'Attend', attend_event_path %>
                     <% else %>
                       <%= link_to 'Cancel Attendance', cancel_attendance_path %><br /><br />
-                      <%= render :partial => 'update_sharables' %>
+                      <%= render :partial => 'shared/update_sharables' %>
                       <%= render :partial => 'attendees' %>
                     <% end %>
                     <br />
