--- a/app/views/shared/_update_sharables.html.erb
+++ b/app/views/shared/_update_sharables.html.erb
@@ -1,5 +1,5 @@
 What resources would you like to share? <br />
-<% form_tag update_sharables_path(@event.id), :remote => true do %>
+<% form_tag update_sharables_path(@group.id), :remote => true do %>
   <% Sharable.all.each do |sharable| %>
     <% checked = @my_sharables.include?(sharable) %>
     <%= check_box_tag(sharable.slug, '', checked, :class => 'submittable') %>
@@ -7,5 +7,5 @@ What resources would you like to share? <br />
   <% end %>
 <% end %>
 <div id="resources_sharing">
-  <%= render :partial => 'resources_sharing' %>
+  <%= render :partial => 'shared/resources_sharing' %>
 </div>
